Fix homepage image covering create/join buttons

--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -39,9 +39,6 @@ h5 {
 #navbar {
   font-family: "Archivo", sans-serif;
 }
-.short {
-  padding: 5% 2%;
-}
 .navbar-brand {
   font-weight: 700;
   font-size: 1.8rem;
@@ -61,9 +58,11 @@ h5 {
 }
 .short {
   padding: 2% 2%;
+  padding-bottom: 0;
 }
 .shortText {
   padding: 3% 2%;
+  padding-bottom: 110px;
 }
 
 
@@ -95,10 +94,14 @@ h5 {
 }
  
 .button-holder {
-  padding-top: 3%;
   width: 60%;
-  position: relative;
+  padding-bottom: 2%;
+  padding-left: 2%;
 }
+.button-holder-col {
+  padding-left: 4%;
+}
+
 .create-room-button {
   width: 45%;
   margin-right: 2%;
@@ -114,4 +117,12 @@ h5 {
 }
 .img_videochat{
   width: 100%;
+}
+
+@media (max-width: 1050px) {
+  .img_videochat {
+    visibility: hidden;
+    position: absolute;
+    z-index: -100;
+  }
 }
